--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <link href="style.css" rel="stylesheet">
   <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
  </head>
+ <script src="script.js"></script>
   <body>
+    <script>
+      console.log("test")
+      alert("오늘 기분은 어떠신가요?")
+    </script>
     <div id="top">
     <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"/>
     <input type="search" value="🔍검색"/>
@@ -18,18 +23,19 @@
     <img class="circle_pic" src="image/profile.jpg" />
     </div>
       <div id="profile_info">
-    <div id="">half_bottle<i class="fas fa-cog"></i></div>
+    <div id="id">
+      <span>half_bottle</span><i class="fas fa-cog"></i></div>
     <button>프로필 편집</button>
       </div>
      </div> 
      <div>
     <p>
-        <strong>
+        <strong id="userInfo">
         반병현(Byunghyun Ban)
         </strong><br/>
-        작가
+        <span id="summary">작가</span>
     </p>
-    <p>
+    <p id="profileDetail">
     <a href="https://needleworm.github.io">
     needleworm.github.io
     </a>
